Change paragraph in contact.html

--- a/css/style.css
+++ b/css/style.css
@@ -437,6 +437,12 @@ img {
 	color: #0e2934;
 	text-decoration: none;
 }
+#send-button h3{
+	padding:0%;
+	color: #010101;
+	border: #010101;
+	border-width: 10vh;
+}
 
 /*------------------------------ Services Page ------------------------------*/
 #services p {
