--- a/css/style.css
+++ b/css/style.css
@@ -121,7 +121,7 @@ img {
 }
 #adbox div.images {
 	float: right;
-	display: inline-block;
+	display: block;
 	height: 281px;
 	width: 710px;
 	overflow: hidden;
@@ -436,12 +436,6 @@ img {
 #services span a, #solutions span a, #support span a {
 	color: #0e2934;
 	text-decoration: none;
-}
-#send-button h3{
-	padding:0%;
-	color: #010101;
-	border: #010101;
-	border-width: 10vh;
 }
 
 /*------------------------------ Services Page ------------------------------*/
